tests/error/errors_on_usage/or_not_defined.err
Error: Variable not defined (at $FILE:7:15)
  | 
5 | def foo(x: bool, y: int) -> int:
6 |     if x or (z := y + 1):
7 |         return z
  |                ^ `z` might be undefined ...
  | 
6 |     if x or (z := y + 1):
  |        - ... if this expression is `True`

Guppy compilation failed due to 1 previous error
